[BOURNE-2565] Sync with upstream (#23)
* Add subGroup as managed properties

* Update documentation

* Bump softprops/action-gh-release from 2.1.0 to 2.5.0

Bumps [softprops/action-gh-release](https://github.com/softprops/action-gh-release) from 2.1.0 to 2.5.0.
- [Release notes](https://github.com/softprops/action-gh-release/releases)
- [Changelog](https://github.com/softprops/action-gh-release/blob/master/CHANGELOG.md)
- [Commits](https://github.com/softprops/action-gh-release/compare/v2.1.0...v2.5.0)

---
updated-dependencies:
- dependency-name: softprops/action-gh-release
  dependency-version: 2.5.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump azure/setup-helm from 4.2.0 to 4.3.1

Bumps [azure/setup-helm](https://github.com/azure/setup-helm) from 4.2.0 to 4.3.1.
- [Release notes](https://github.com/azure/setup-helm/releases)
- [Changelog](https://github.com/Azure/setup-helm/blob/main/CHANGELOG.md)
- [Commits](https://github.com/azure/setup-helm/compare/v4.2.0...v4.3.1)

---
updated-dependencies:
- dependency-name: azure/setup-helm
  dependency-version: 4.3.1
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* fixes adorsys#1278: Updating attributes of a user, which has no attributes set, will work now

* [maven-release-plugin] prepare release v6.4.1

* [maven-release-plugin] prepare for next development iteration

* build(deps): bump crazy-max/ghaction-github-runtime from 3.0.0 to 3.1.0

Bumps [crazy-max/ghaction-github-runtime](https://github.com/crazy-max/ghaction-github-runtime) from 3.0.0 to 3.1.0.
- [Release notes](https://github.com/crazy-max/ghaction-github-runtime/releases)
- [Commits](https://github.com/crazy-max/ghaction-github-runtime/compare/v3.0.0...v3.1.0)

---
updated-dependencies:
- dependency-name: crazy-max/ghaction-github-runtime
  dependency-version: 3.1.0
  